dataset1235/2025-2/2318198438/users/1245973847/executions/2601575092_3940197836.log
== RUN (2025-08-12 01:12:40)
-- CODE: 
aresta = 5
area = ((3*(3**(1/2)))/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 01:12:48)
-- CODE: 
aresta = 5
area = ((3*(3**(1/2)))/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 01:12:29)
-- CODE: 
aresta = 5
area = ((3*(3**(1/n)))/2)*(aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ((3*(3**(1/n)))/2)*(aresta**2)
                      ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = ((3*(3**(1/n)))/2)*(aresta**2)
                      ^
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
